# filerunner

./: .env.example  .gitignore  API_EXAMPLES.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  ENVIRONMENT_SETUP.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PHASE_2_COMPLETE.md  PROJECT_STATUS.md  README.md  SECURITY.md  SETUP.md  docker-compose.ssl.yml  docker-compose.yml  package-lock.json  start.bat  start.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
backend/migrations/: 20240101000001_create_user_role_enum.sql  20240101000002_create_users_table.sql  20240101000003_create_projects_table.sql  20240101000004_create_folders_table.sql  20240101000005_create_files_table.sql  20240101000006_add_must_change_password.sql  20240101000007_create_refresh_tokens_table.sql
backend/src/: config.rs  error.rs  main.rs
backend/src/db/: pool.rs
backend/src/handlers/: auth.rs  file.rs  folder.rs  mod.rs  project.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/models/: file.rs  folder.rs  mod.rs  project.rs  refresh_token.rs  user.rs
backend/src/utils/: jwt.rs  mod.rs  password.rs
cli/: README.md
frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: ChangePasswordModal.tsx  EmptyState.tsx  UploadDropzone.tsx
frontend/lib/: api.ts  config.ts  (+3 more)
nginx/: README.md  nginx-letsencrypt.conf  nginx-ssl.conf  nginx.conf  ssl-params.conf
(+11 files in other folders)
