[package]
name = "filerunner-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1.35", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace", "set-header"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication & Security
jsonwebtoken = "9.2"
argon2 = "0.5"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Environment & Config
dotenv = "0.15"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File handling
mime_guess = "2.0"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# HTTP
http = "1.0"
http-body-util = "0.1"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Rate limiting
governor = "0.6"
tower_governor = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
